# pydantic-ai-series

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  db.py  ingestion.py  inngest_client.py  inngest_functions.py  main.py  models.py  neo4j_db.py  pyproject.toml  retrieval.py  settings.py
backend/agent/: generator.py  model.py  orchestrator.py  planner.py  setup.py
backend/agent/capabilities/company/: company_knowledge.py
backend/agent/capabilities/email/: email_capability.py
backend/agent/capabilities/research/: research_capability.py
backend/alembic/: env.py
backend/alembic/versions/: 3926fd6d8276_init.py
backend/routers/: agents.py  agui.py  capabilities.py  conversation.py  ingestion.py
frontend/: Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/agent/: index.tsx
frontend/src/components/agent-dialog/: index.tsx
frontend/src/components/chat/: index.tsx
frontend/src/components/currency/: index.tsx
frontend/src/components/home/: index.tsx
frontend/src/components/main/: index.tsx
frontend/src/components/preview/: index.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/lib/: utils.ts
frontend/src/model/: message.ts  snapshot.ts  tool.ts
frontend/src/models/: index.ts
frontend/src/store/: index.tsx
widget/: index.html  package.json  vite.config.ts
widget/src/: embed.tsx  index.ts  main.tsx
widget/src/components/: chat-window.tsx  indentity-form.tsx  launcher.tsx  widget.tsx
widget/src/models/: index.ts
(+21 files in other folders)
